update dependencies and use influx2 client